[project]
name = "ruzino-nosdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyopengl>=3.1.10",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
